<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/horizontal_padding"
        android:layout_marginLeft="@dimen/vertical_padding"
        android:layout_marginRight="@dimen/vertical_padding"
        android:layout_marginTop="@dimen/horizontal_padding"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/welcome_text"
    android:textAllCaps="true"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textSize="15dp"
    android:textColor="@color/some_color"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Question1"
            android:textAllCaps="false"
            android:textColor="@color/some_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/finport"
            android:layout_gravity="center"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <CheckBox
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingLeft="24dp"
            android:text="Finland"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/question1.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="Portugal"
            android:textSize="16sp"
            android:layout_weight="1"/>
</LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Question1"
            android:textAllCaps="false"
            android:textColor="@color/some_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/frpl"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/left_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="24dp"
                android:text="France"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/right_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="Poland"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Question2"
            android:textAllCaps="false"
            android:textColor="@color/some_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ukdk"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/left_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="24dp"
                android:text="United Kingdom"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/right_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="Danmark"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Question1"
            android:textAllCaps="false"
            android:textColor="@color/some_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/lvcyp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/left_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="24dp"
                android:text="Latvia"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/right_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="Cyprus"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Question4"
            android:textAllCaps="false"
            android:textColor="@color/some_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/cr"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="24dp"
                android:text="Greece"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="24dp"
                android:text="Croatia"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="Albania"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:onClick="submitAnswer"
            android:text="submit answers"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="QUIZ RESULTS:"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>